Fix heights of trinity items being inconsistent where french text is long and wraps lines.

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -20,7 +20,7 @@ $home-bg-color: #284162;
   padding: 30px 0 0;
   color: white;
   border-bottom: 10px solid #FF5E59;
-  
+
   & > h1 {
     border-bottom: none !important;
   }
@@ -112,6 +112,7 @@ $home-bg-color: #284162;
 
 .TrinityItem {
   @include unstyled-link;
+  height: 100%;
   background-color: #767F89;
   border-radius: 10px;
   padding: 3rem;
